# midi-player-streamly

./: .editorconfig  .gitignore  README.md  midi-player-pipes.cabal  midi-player-streamly.cabal  package-lock.json  package.json  stack.yaml  webpack.config.js
src/: HtmlGUI.hs  Main.css  Main.hs  Main.html  Main.js  Main.svelte  Main.vue
