name:                midi-player-streamly
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/midi-player-pipes#readme
license:             GPL-3
license-file:        LICENSE
author:              Alvaro F. García
maintainer:          alvarofernandogarcia@gmail.com
copyright:           2019 Alvaro F. García
category:            Multimedia
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable midi-player-streamly
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       HtmlGUI
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , directory
                     , jmacro
                     , midi
                     , midi-portmidi
                     , mtl
                     , PortMidi
                     , streamly
                     , text
                     , time
                     , webviewhs
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N